--- a/under-construction/package.json
+++ b/under-construction/package.json
@@ -29,7 +29,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "git-scripts": "^0.2.1",
+    "prettier": "^1.15.2",
+    "surge": "^0.20.1"
+  },
+  "git": {
+    "scripts": {
+      "pre-push": "surge --project ./ --domain edlaraf.com"
+    }
   },
   "repository": {
     "type": "git",
